--- a/Bday card/card.html
+++ b/Bday card/card.html
@@ -47,7 +47,7 @@
       <div class="face front">
         <div class="photo">
           <!-- Replace 'front.jpg' with your photo file. Keep filename exact or change src below. -->
-          <img id="frontImg" src="front.jpg" alt="Our photo" />
+          <img id="frontImg" src="front.jpeg" alt="Our photo" />
         </div>
         <div class="caption">
           <div class="heart">❤</div>
