--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
       text-align:center;
     }
     .message{
-      font-size:20px;
-      line-height:1.4;
+      font-size:12px;
+      line-height:1.2;
       color:#1b2430;
       margin-bottom:18px;
     }
@@ -145,7 +145,6 @@
 </head>
 <body>
   <div class="stage">
-    <div class="hint">Click the card to open 💌</div>
     <div id="card" class="card" role="button" tabindex="0" aria-label="Open e-card">
 
       <!-- FRONT -->
@@ -162,7 +161,7 @@
       <!-- INSIDE -->
       <div class="face inside">
         <div>
-          <div class="message" id="messageText">Hey love — every day with you feels like the best chapter of my life. Thank you for being you. 💫</div>
+          <div class="message" id="messageText">Happy Birthday love! I miss you more than words can say. Even miles apart, I feel every moment with you, and I believe in you with all my heart. I know you’ll achieve everything you dream of, and I’ll always be cheering you on. Whenever you feel defeated or doubt yourself, open this card and remember: I’m always on your side, loving you, and proud of you. 💫</div>
         </div>
       </div>
 
